tests/rosetta/out/Fortran/bioinformatics-base-count.f90
! Generated by Mochi compiler v0.10.28 on 2006-01-02T15:04:05Z
program bioinformatics_base_count
  implicit none
  character(len=100) :: dna
  integer :: le
  integer :: i
  integer :: a
  integer :: c
  integer :: g
  integer :: t
  integer :: idx
    integer :: k
    character(len=100) :: s0
    integer :: ch
  character(len=100) :: s1
  character(len=100) :: s2
  character(len=100) :: s3
  character(len=100) :: s4
  character(len=100) :: s5
    character(len=100) :: res
    integer :: n
  dna = trim(trim(trim(trim(trim(trim(trim(trim(trim('' // 'CGTAAAAAATTACAACGTCCTTTGGCTATCTCTTAAACTCCTGCTAAATG') // 'CTCGTGCTTTCCAATTATGTAAGCGTTCCGAGACGGGGTGGTCGATTCTG') // 'AGGACAAAGGTCAAGATGGAGCGCATCGAACGCAATAAGGATCATTTGAT') // 'GGGACGTTTCGTCGACAAAGTCTTGTTTCGAGAGTAACGGCTACCGTCTT') // 'CGATTCTGCTTATAACACTATGTTCTTATGAAATGGATGTTCTGAGTTGG') // 'TCAGTCCCAATGTGCGGGGTTTCTTTTAGTACGTCGGGAGTGGTATTATA') // 'TTTAATTTTTCTATATAGCGATCTGTATTTAAGCAATTCATTTAGGTTAT') // 'CGCCGCGATGCTCGGTTCGGACCGCCAAGCATCTGGCTCCACTGCTAGTG') // 'TCCTAAATTTGAATGGCAAACACAAATAAGATTTAGCAATTCGTGTAGAC') // 'GACCGGGGACTTGCATGATGGGAGCAGCTTTGTTAAACTACGAACGTAAT'
  print *, 'SEQUENCE:'
  le = len(dna)
  i = 0
  do while ((i < le))
    k = (i + 50)
    if ((k > le)) then
      k = le
    end if
    write(s0,'(G0)') i
    print *, trim(padLeft(s0,5) // ': ') // trim(dna((i)+1:k))
    i = (i + 50)
  end do
  a = 0
  c = 0
  g = 0
  t = 0
  idx = 0
  do while ((idx < le))
    ch = dna(idx+1:(idx + 1))
    if ((ch == 'A')) then
      a = (a + 1)
    else
      if ((ch == 'C')) then
        c = (c + 1)
      else
        if ((ch == 'G')) then
          g = (g + 1)
        else
          if ((ch == 'T')) then
            t = (t + 1)
          end if
        end if
      end if
    end if
    idx = (idx + 1)
  end do
  print *, ''
  print *, 'BASE COUNT:'
  write(s1,'(G0)') a
  print *, '    A: ' // padLeft(s1,3)
  write(s2,'(G0)') c
  print *, '    C: ' // padLeft(s2,3)
  write(s3,'(G0)') g
  print *, '    G: ' // padLeft(s3,3)
  write(s4,'(G0)') t
  print *, '    T: ' // padLeft(s4,3)
  print *, '    ------'
  write(s5,'(G0)') le
  print *, '    Σ: ' // s5
  print *, '    ======'
  
  contains
  recursive character(len=100) function padLeft(s,w) result(res)
    character(len=100), intent(in) :: s
    integer, intent(in) :: w
    res = ''
    n = (w - size(s))
    do while ((n > 0))
      res = res // ' '
      n = (n - 1)
    end do
    res = (res + s)
    return
  end function padLeft
end program bioinformatics_base_count
